--- a/FigureMe/Storyboards/Storyboard-iPad.storyboard
+++ b/FigureMe/Storyboards/Storyboard-iPad.storyboard
@@ -1144,7 +1144,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Sd8-qh-KrG"/>
+        <segue reference="Mot-0M-hqi"/>
         <segue reference="PIg-2K-s75"/>
     </inferredMetricsTieBreakers>
 </document>
